--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -592,3 +592,28 @@ table a, #comments a{background-color:inherit;}
 @media only screen and (max-width: 990px){
     .progress{ margin-bottom: 20px; }
 }
+
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 30%;
+  height: 500px;
+  float: left;
+  margin: 2px 16px;
+  background-color:#333;
+  padding-top: 16px;
+ border-radius: 7px; /* 5px rounded corners */
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+
+  padding: 2px 16px;
+}
